https://crm.smart-gamma.com/issues/1505 =>Fixed product alignment on home page after updates;

--- a/wp-content/themes/canvas-child/css/home.css
+++ b/wp-content/themes/canvas-child/css/home.css
@@ -134,6 +134,9 @@
     .bestselling.products ul.products li.product.first {
         clear: left !important;
     }
+	.recent.products ul.products li.product.first.status-private{
+		clear: none !important;
+	}
 
 
 
